{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 9,
  "lineage": "e2293bbc-0556-8bf6-5730-bfa6d9d40cde",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dream_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f8a61b66d1accaee",
            "arn": "arn:aws:ec2:us-east-1:025881471985:instance/i-0d7254e4cbc54331c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7254e4cbc54331c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dream-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e2304b815f0b265b",
            "private_dns": "ip-10-0-1-84.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.84",
            "public_ip": "3.92.6.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ef5d47e3881be184",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0895ec301b1b2e4bf",
            "tags": {
              "Name": "dream-server"
            },
            "tags_all": {
              "Name": "dream-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ee83e59e80a537d8"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dream_sg",
            "aws_subnet.dream_subnet",
            "aws_vpc.dream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dream_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025881471985:internet-gateway/igw-07f581b3d8e014db2",
            "id": "igw-07f581b3d8e014db2",
            "owner_id": "025881471985",
            "tags": {
              "Name": "dream-igw"
            },
            "tags_all": {
              "Name": "dream-igw"
            },
            "vpc_id": "vpc-09c717c6c0470373d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dream_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025881471985:route-table/rtb-0c0848c938a4206d5",
            "id": "rtb-0c0848c938a4206d5",
            "owner_id": "025881471985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f581b3d8e014db2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dream-rt"
            },
            "tags_all": {
              "Name": "dream-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c717c6c0470373d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dream_igw",
            "aws_vpc.dream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dream_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c944e7f21186598a",
            "route_table_id": "rtb-0c0848c938a4206d5",
            "subnet_id": "subnet-0895ec301b1b2e4bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dream_igw",
            "aws_route_table.dream_rt",
            "aws_subnet.dream_subnet",
            "aws_vpc.dream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dream_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025881471985:security-group/sg-0ee83e59e80a537d8",
            "description": "Security group for dream vacation app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee83e59e80a537d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dream-sg",
            "name_prefix": "",
            "owner_id": "025881471985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dream-sg"
            },
            "tags_all": {
              "Name": "dream-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c717c6c0470373d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dream_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025881471985:subnet/subnet-0895ec301b1b2e4bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0895ec301b1b2e4bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "025881471985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dream-subnet"
            },
            "tags_all": {
              "Name": "dream-subnet"
            },
            "vpc_id": "vpc-09c717c6c0470373d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dream_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025881471985:vpc/vpc-09c717c6c0470373d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084749f21213723fb",
            "default_route_table_id": "rtb-0d4f85ca98fac64ee",
            "default_security_group_id": "sg-0499f5fa6e1b04b27",
            "dhcp_options_id": "dopt-0b0b1ca1a24bfcb36",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c717c6c0470373d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4f85ca98fac64ee",
            "owner_id": "025881471985",
            "tags": {
              "Name": "dream-vpc"
            },
            "tags_all": {
              "Name": "dream-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}